add update metod in studioresource
